updated the profile image changing file name
I have updated the profile image changing file name. every time, profile image file will now get a unique name and older files will be deleted simutaniously

--- a/styles/dstyle.css
+++ b/styles/dstyle.css
@@ -115,9 +115,9 @@ img {
 
 .profile_imagecss {
   position: relative;
-  -webkit-border-radius:50px;
-  -moz-border-radius:50px;
-  border-radius:50px;
+  -webkit-border-radius:50%;
+  -moz-border-radius:50%;
+  border-radius:50%;
   width: 20%
   height: auto;
 }
