--- a/styles/dstyle.css
+++ b/styles/dstyle.css
@@ -198,9 +198,9 @@ html, body {
 }
 
 .messages_div {
-	height: 100%;
-	overflow-y: scroll;
-	background-color: #6F6F6F;
+  height: 100%;
+  overflow-y: scroll;
+  background-color: #6F6F6F;
 }
 
 /* Chat message-containers css*/
@@ -258,15 +258,15 @@ html, body {
 }
 
 .message-text {
-	font-weight: 100;
-	color: black;
+  font-weight: 100;
+  color: black;
 }
 
 .button-success,
 .button-error,
 .button-warning,
 .button-secondary {
-	height: 30px;
+  height: 30px;
     color: white;
     border-radius: 4px;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
@@ -304,72 +304,78 @@ html, body {
 
 /* for list options */
 .search_bar {
-	width: 94%;
-	height:30px;
-	margin-left:3%;
-	margin-right:3%;
-	margin-bottom:5px;
-	border: 1px solid #00B4CC;
-	border-radius: 10%;
+  width: 94%;
+  height:30px;
+  margin-left:3%;
+  margin-right:3%;
+  margin-bottom:5px;
+  border: 1px solid #00B4CC;
+  border-radius: 10%;
 }
 
 .user-tile {
-	width: 94%;
-	height:60px;
-	margin-left:3%;
-	margin-right:3%;
-	margin-top:2px;
-	margin-bottom:2px;
-	text-align: left;
-	background-color:rgb(230, 230, 230);
+  width: 94%;
+  height:60px;
+  margin-left:3%;
+  margin-right:3%;
+  margin-top:2px;
+  margin-bottom:2px;
+  text-align: left;
+  background-color:rgb(230, 230, 230);
 }
 
 .user-tile:hover {
-	background-color:rgb(204, 204, 204);
+  background-color:rgb(204, 204, 204);
 }
 
 .list-tile-image {
-	height: 50px;
-	width: 50px;
-	margin: 2px;
-	font-family: arial;
+  height: 50px;
+  width: 50px;
+  margin: 2px;
+  font-family: arial;
 }
 
 .list-name-label {
-	height: 50px;
-	width: 50px;
-	font-weight: bold;
-	font-family: arial;
-	font-size: 18px;
-	color : rgb(26, 26, 26);
+  height: 50px;
+  width: 90%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-weight: bold;
+  font-family: arial;
+  font-size: 18px;
+  color : rgb(26, 26, 26);
 }
 
 .list-username-label {
-	height: 50px;
-	width: 50px;
-	font-style: italic;
-	font-family: arial;
-	font-size: 15px;
-	color : rgb(0, 0, 26);
+  height: 50px;
+  width: 90%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-style: italic;
+  font-family: arial;
+  font-size: 15px;
+  color : rgb(0, 0, 26);
 }
 
 .user_heading_div {
-	background-color: #121212;
-	box-shadow: 2px 2px;
-	text-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+  background-color: #121212;
+  box-shadow: 2px 2px;
+  text-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 }
 
 .message-text-box {
-	display: block;
-	box-sizing: padding-box;
-	overflow: hidden;
-	padding: 10px;
-	width: 90%;
+  display: block;
+  box-sizing: padding-box;
+  overflow: hidden;
+  padding: 10px;
+  width: 90%;
   float: left;
-	font-size: 18px;
-	margin: 1px auto;
-	border-radius: 6px;
-	border: 2px solid #ccc;
-	box-shadow: 2px 2px 8px rgba(black, .3);
-	border: 0;
+  font-size: 18px;
+  margin: 1px auto;
+  border-radius: 6px;
+  border: 2px solid #ccc;
+  box-shadow: 2px 2px 8px rgba(black, .3);
+  border: 0;
 }
